--- a/bricks/containers/src/flex-layout/example.html
+++ b/bricks/containers/src/flex-layout/example.html
@@ -4,15 +4,15 @@
     <title></title>
   </head>
   <body>
-    <basic.flex-layout
+    <containers.flex-layout
       id="flex-demo-1"
       style="width: 900px; background: pink; margin-bottom: 20px"
     >
       <div style="background: yellow">第一个 div</div>
       <div style="background: orange">第二个 div</div>
-    </basic.flex-layout>
+    </containers.flex-layout>
 
-    <basic.flex-layout
+    <containers.flex-layout
       id="flex-demo-2"
       style="width: 155px; background: pink; border: 1px solid black"
     >
@@ -22,7 +22,7 @@
       <div style="background: Chartreuse">NO.4</div>
       <div style="background: Aquamarine">NO.5</div>
       <div style="background: YellowGreen">NO.6</div>
-    </basic.flex-layout>
+    </containers.flex-layout>
 
     <script>
       const flex = document.querySelector("#flex-demo-1");
