--- a/bricks/containers/src/grid-layout/example.html
+++ b/bricks/containers/src/grid-layout/example.html
@@ -4,7 +4,7 @@
     <title></title>
   </head>
   <body>
-    <basic.grid-layout
+    <containers.grid-layout
       id="grid-demo-1"
       style="width: 900px; background: pink; margin-bottom: 20px"
     >
@@ -15,7 +15,7 @@
       <div style="background: green">第五个 div</div>
       <div style="background: black">第六个 div</div>
       <div style="background: gray">第七个 div</div>
-    </basic.grid-layout>
+    </containers.grid-layout>
 
     <script>
       const grid = document.querySelector("#grid-demo-1");
