--- a/bricks/containers/src/modal/example.html
+++ b/bricks/containers/src/modal/example.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <basic.general-modal
+    <containers.general-modal
       id="modal1"
       confirm-disabled="false"
       auto-close-when-confirm="true"
@@ -16,7 +16,7 @@
     >
       这是一个模态框-1
       <basic.general-button id="btn2">打开模态框-2</basic.general-button>
-      <basic.general-modal
+      <containers.general-modal
         id="modal2"
         confirm-disabled="true"
         width="300px"
@@ -24,8 +24,8 @@
         mask-closable="false"
       >
         这是一个模态框-2
-      </basic.general-modal>
-    </basic.general-modal>
+      </containers.general-modal>
+    </containers.general-modal>
     <basic.general-button id="btn1">打开模态框-1</basic.general-button>
   </body>
   <script>
