--- a/bricks/containers/src/card/example.html
+++ b/bricks/containers/src/card/example.html
@@ -8,17 +8,17 @@
   </head>
 
   <body>
-    <basic.general-card
+    <containers.general-card
       id="card1"
       card-title="标题"
       verticalCenter="true"
       fillVertical="true"
     >
       这是一个通用卡片
-    </basic.general-card>
-    <basic.general-card id="card2" card-title="标题">
+    </containers.general-card>
+    <containers.general-card id="card2" card-title="标题">
       这是一个通用卡片2
-    </basic.general-card>
+    </containers.general-card>
   </body>
   <script>
     const card1 = document.querySelector("#card1");
