feat(): code editor move to advanced package

--- a/bricks/form/src/code-editor/example.html
+++ b/bricks/form/src/code-editor/example.html
@@ -17,8 +17,8 @@
       min-lines="5" max-lines="10">
     </form.code-editor>
 
-    <form.general-button id="btn1">提交</form.general-button>
-    <form.general-button id="btn2">设置默认值</form.general-button>
+    <basic.general-button id="btn1">提交</basic.general-button>
+    <basic.general-button id="btn2">设置默认值</basic.general-button>
   </form.general-form>
 </body>
 <script>
