--- a/bricks/form/src/dynamic-form-item/example.html
+++ b/bricks/form/src/dynamic-form-item/example.html
@@ -9,8 +9,8 @@
 <body>
   <form.general-form id="form">
     <form.dynamic-form-item name="dynamic" label="动态表单" required="true" id="dynamic-form-item"></form.dynamic-form-item>
-    <form.general-button id="submit-btn">提交表单</form.general-button>
-    <form.general-button id="set-value-btn">设置默认值</form.general-button>
+    <basic.general-button id="submit-btn">提交表单</basic.general-button>
+    <basic.general-button id="set-value-btn">设置默认值</basic.general-button>
   </form.general-form>
 </body>
 <script>
