--- a/bricks/form/src/form/example.html
+++ b/bricks/form/src/form/example.html
@@ -28,9 +28,9 @@
         ></form.general-input>
       </form.general-form-item>
     </form.general-form>
-    <form.general-button id="btn-submit">提交</form.general-button>
-    <form.general-button id="btn-set">设置</form.general-button>
-    <form.general-button id="btn-clear">清除</form.general-button>
+    <basic.general-button id="btn-submit">提交</basic.general-button>
+    <basic.general-button id="btn-set">设置</basic.general-button>
+    <basic.general-button id="btn-clear">清除</basic.general-button>
 
     <div style="margin-top: 30px">form2</div>
 
@@ -49,7 +49,7 @@
         <form.general-input name="sex" label="性别"></form.general-input>
       </div>
     </form.general-form>
-    <form.general-button id="form2-submit">提交</form.general-button>
+    <basic.general-button id="form2-submit">提交</basic.general-button>
   </body>
   <script>
     const form1 = document.getElementById("form1");
