--- a/bricks/form/src/textarea/example.html
+++ b/bricks/form/src/textarea/example.html
@@ -8,34 +8,39 @@
   </head>
 
   <body>
-    <div>normal:</div>
-    <form.general-textarea></form.general-textarea>
+    <form.general-form>
+      <div>normal:</div>
+      <form.general-textarea></form.general-textarea>
 
-    <div style="margin-top: 20px">placeholder:</div>
-    <form.general-textarea
-      placeholder="Hello World! This is a placeholder!"
-    ></form.general-textarea>
+      <div style="margin-top: 20px">placeholder:</div>
+      <form.general-textarea
+        placeholder="Hello World! This is a placeholder!"
+        required="true"
+        name="textarea"
+        label="textarea"
+      ></form.general-textarea>
 
-    <div style="margin-top: 20px">value:</div>
-    <form.general-textarea value="this is a value!"></form.general-textarea>
+      <div style="margin-top: 20px">value:</div>
+      <form.general-textarea value="this is a value!"></form.general-textarea>
 
-    <div style="margin-top: 20px">autoSize:</div>
-    <form.general-textarea
-      id="textarea-1"
-      placeholder="autoSize: { minRows: 2, maxRows: 5 }"
-    ></form.general-textarea>
+      <div style="margin-top: 20px">autoSize:</div>
+      <form.general-textarea
+        id="textarea-1"
+        placeholder="autoSize: { minRows: 2, maxRows: 5 }"
+      ></form.general-textarea>
 
-    <div style="margin-top: 20px">diabled:</div>
-    <form.general-textarea
-      disabled="true"
-      value="disabled"
-    ></form.general-textarea>
+      <div style="margin-top: 20px">diabled:</div>
+      <form.general-textarea
+        disabled="true"
+        value="disabled"
+      ></form.general-textarea>
 
-    <div style="margin-top: 20px">maxLength & minLength:</div>
-    <form.general-textarea
-      max-length="10"
-      min-length="2"
-    ></form.general-textarea>
+      <div style="margin-top: 20px">maxLength & minLength:</div>
+      <form.general-textarea
+        max-length="10"
+        min-length="2"
+      ></form.general-textarea>
+    </form.general-form>
   </body>
   <script>
     var textarea1 = document.getElementById("textarea-1");
