feat(): replace size middle to medium

--- a/bricks/basic/src/button/example.html
+++ b/bricks/basic/src/button/example.html
@@ -12,7 +12,7 @@
     <basic.general-button size="large" type="primary" id="demo1">
       Hello World
     </basic.general-button>
-    <basic.general-button size="middle" type="primary" id="demo2">
+    <basic.general-button size="medium" type="primary" id="demo2">
       Hello World
     </basic.general-button>
     <basic.general-button size="small" type="primary">
