--- a/bricks/basic/src/dropdown-button/example.html
+++ b/bricks/basic/src/dropdown-button/example.html
@@ -15,7 +15,7 @@
 
     <basic.dropdown-button
       id="drop-buttons-2"
-      size="middle"
+      size="medium"
       type="primary"
     ></basic.dropdown-button>
   </body>
