--- a/bricks/form/src/input/example.html
+++ b/bricks/form/src/input/example.html
@@ -18,10 +18,7 @@
       size="large"
     ></form.general-input>
     <div style="height: 20px"></div>
-    <form.general-input
-      placeholder="middle"
-      size="middle"
-    ></form.general-input>
+    <form.general-input placeholder="medium" size="medium"></form.general-input>
     <div style="height: 20px"></div>
     <form.general-input placeholder="small" size="small"></form.general-input>
 
@@ -38,16 +35,10 @@
     ></form.general-input>
 
     <div style="margin-top: 20px">maxLength:</div>
-    <form.general-input
-      max-length="10"
-      value="abcdefghij"
-    ></form.general-input>
+    <form.general-input max-length="10" value="abcdefghij"></form.general-input>
 
     <div style="margin-top: 20px">minLength:</div>
-    <form.general-input
-      min-length="10"
-      value="abcdefghij"
-    ></form.general-input>
+    <form.general-input min-length="10" value="abcdefghij"></form.general-input>
 
     <div style="margin-top: 20px">type:</div>
     <div style="margin-top: 10px">password</div>
