--- a/bricks/containers/src/card/example.html
+++ b/bricks/containers/src/card/example.html
@@ -1,27 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-
-  <body>
-    <containers.general-card
-      id="card1"
-      card-title="标题"
-      verticalCenter="true"
-      fillVertical="true"
-    >
-      这是一个通用卡片
-    </containers.general-card>
-    <containers.general-card id="card2" card-title="标题">
-      这是一个通用卡片2
-    </containers.general-card>
-  </body>
-  <script>
-    const card1 = document.querySelector("#card1");
-    card1.operationButtons = [{ id: 1, eventName: "d", text: "fff" }];
-  </script>
-</html>
+<containers.general-card
+  id="card1"
+  card-title="标题"
+  verticalCenter="true"
+  fillVertical="true"
+>
+  这是一个通用卡片
+</containers.general-card>
+<div style="margin-top: 30px"></div>
+<containers.general-card id="card2" card-title="标题">
+  这是一个通用卡片2
+</containers.general-card>
+<script>
+  const card1 = document.querySelector("#card1");
+  card1.operationButtons = [{ id: 1, eventName: "d", text: "fff" }];
+</script>
