feat(): support presentional bricks

--- a/bricks/presentational/src/descriptions/example.html
+++ b/bricks/presentational/src/descriptions/example.html
@@ -1,32 +1,32 @@
-<basic.general-descriptions
+<presentational.general-descriptions
   description-title="horizontal基础布局"
   id="description-1"
-></basic.general-descriptions>
+></presentational.general-descriptions>
 <div style="margin-top: 30px"></div>
-<basic.general-descriptions
+<presentational.general-descriptions
   description-title="vertical布局&无背景"
   id="description-2"
-></basic.general-descriptions>
+></presentational.general-descriptions>
 <div style="margin-top: 30px"></div>
-<basic.general-descriptions
+<presentational.general-descriptions
   description-title="horizontal基础布局&带边框"
   id="description-3"
-></basic.general-descriptions>
+></presentational.general-descriptions>
 <div style="margin-top: 30px"></div>
-<basic.general-descriptions
+<presentational.general-descriptions
   description-title="vertical布局&带边框"
   id="description-4"
-></basic.general-descriptions>
+></presentational.general-descriptions>
 <div style="margin-top: 30px"></div>
-<basic.general-descriptions
+<presentational.general-descriptions
   description-title="hideGroups使用"
   id="description-5"
-></basic.general-descriptions>
+></presentational.general-descriptions>
 <div style="margin-top: 30px"></div>
-<basic.general-descriptions
+<presentational.general-descriptions
   description-title="dataSource使用"
   id="description-6"
-></basic.general-descriptions>
+></presentational.general-descriptions>
 
 <script>
   const description1 = document.getElementById("description-1");
