--- a/bricks/basic/src/dropdown-button/example.html
+++ b/bricks/basic/src/dropdown-button/example.html
@@ -13,14 +13,7 @@
 <script>
   const dropButton1 = document.getElementById("drop-buttons-1");
   const dropButton2 = document.getElementById("drop-buttons-2");
-
-  dropButton1.icon = {
-    lib: "antd",
-    icon: "right",
-    theme: "outlined",
-  };
-
-  dropButton2.actions = [
+  const actions = [
     {
       text: "第一项",
       icon: {
@@ -41,6 +34,15 @@
       event: "edit",
     },
   ];
+
+  dropButton1.icon = {
+    lib: "antd",
+    icon: "right",
+    theme: "outlined",
+  };
+  dropButton1.actions = actions;
+
+  dropButton2.actions = actions;
 
   dropButton1.addEventListener("click", () => {
     console.log("click drop btn 1");
