feat(): update code

--- a/bricks/basic/src/popover/example.html
+++ b/bricks/basic/src/popover/example.html
@@ -22,30 +22,28 @@
   Click 模式触发
   <div class="common-wrapper">
     <basic.general-popover>
-      <basic.general-button slot="trigger"
-        >Default(bottom)</basic.general-button
-      >
+      <basic.general-button slot="anchor">Default(bottom)</basic.general-button>
       <div class="panel">这是一个面板</div>
     </basic.general-popover>
   </div>
 
   <div class="common-wrapper">
     <basic.general-popover placement="top">
-      <basic.general-button slot="trigger">Top</basic.general-button>
+      <basic.general-button slot="anchor">Top</basic.general-button>
       <div class="panel">这是一个面板</div>
     </basic.general-popover>
   </div>
 
   <div class="left-wrapper">
     <basic.general-popover placement="left">
-      <basic.general-button slot="trigger">Left</basic.general-button>
+      <basic.general-button slot="anchor">Left</basic.general-button>
       <div class="panel">这是一个面板</div>
     </basic.general-popover>
   </div>
 
   <div class="common-wrapper">
     <basic.general-popover placement="right">
-      <basic.general-button slot="trigger">Right</basic.general-button>
+      <basic.general-button slot="anchor">Right</basic.general-button>
       <div class="panel">这是一个面板</div>
     </basic.general-popover>
   </div>
@@ -53,9 +51,7 @@
   <div>Hover模式触发</div>
   <div class="common-wrapper">
     <basic.general-popover trigger="hover">
-      <basic.general-button slot="trigger"
-        >Default(bottom)</basic.general-button
-      >
+      <basic.general-button slot="anchor">Default(bottom)</basic.general-button>
       <div
         style="
           width: 100px;
@@ -71,21 +67,21 @@
 
   <div class="common-wrapper">
     <basic.general-popover placement="top" trigger="hover">
-      <basic.general-button slot="trigger">Top</basic.general-button>
+      <basic.general-button slot="anchor">Top</basic.general-button>
       <div class="panel">这是一个面板</div>
     </basic.general-popover>
   </div>
 
   <div class="left-wrapper">
     <basic.general-popover placement="left" trigger="hover">
-      <basic.general-button slot="trigger">Left</basic.general-button>
+      <basic.general-button slot="anchor">Left</basic.general-button>
       <div class="panel">这是一个面板</div>
     </basic.general-popover>
   </div>
 
   <div class="common-wrapper">
     <basic.general-popover placement="right" trigger="hover">
-      <basic.general-button slot="trigger">Right</basic.general-button>
+      <basic.general-button slot="anchor">Right</basic.general-button>
       <div class="panel">这是一个面板</div>
     </basic.general-popover>
   </div>
